# audioFileAnalyzer

./: .gitignore  CMakeLists.txt  README.md  audiomodel.cpp  audiomodel.h  gridwidget.cpp  gridwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  spectrogramview.cpp  spectrogramview.h  spectrumView.h  spectrumview.cpp  spectrumview.h  waveformview.cpp  waveformview.h
include/: audiomodel.h  mainwindow.h  spectrumView.h
kissfft/: CMakeLists.txt
src/: audiomodel.cpp  mainwindow.cpp  spectrogramview.cpp  spectrumview.cpp
